--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"astro": "^5.1.2"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4"
+		"@biomejs/biome": "^1.9.4",
+		"@types/node": "^22.10.5"
 	}
 }
