--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"@types/node": "^22.10.5"
+		"@types/node": "^22.10.5",
+		"papaparse": "^5.4.1"
 	}
 }
